Fix toolbar button shift issue

--- a/koenig/kg-simplemde/src/css/simplemde.css
+++ b/koenig/kg-simplemde/src/css/simplemde.css
@@ -112,7 +112,6 @@
 .editor-toolbar.disabled-for-preview a:not(.fa-eye):not(.fa-arrows-alt) {
 	pointer-events: none;
 	background: #fff;
-	border: none;
 }
 
 .editor-statusbar {
